# contingency-procedure2dsl

./: .gitignore  README.ja.md  README.md  pyproject.toml
src/contingency_dsl_reader/: __init__.py  pipeline.py  result.py  vocab_reverse.py
src/contingency_dsl_reader/extractors/: experiment.py  llm.py  params.py  respondent.py
src/contingency_procedure2dsl/: __init__.py  pipeline.py  vocab_reverse.py
src/contingency_procedure2dsl/extractors/: __init__.py  annotations.py  llm.py  phase.py  schedule.py
tests/: test_annotation_roundtrip.py  test_experiment_extraction.py  test_full_roundtrip_realistic.py  test_gap_analysis.py  test_new_extractors.py  test_reader_coverage.py  test_roundtrip.py  test_roundtrip_full.py  test_roundtrip_modifier.py  test_schedule_extraction.py  test_subject_extraction_v2.py
